--- a/index.html
+++ b/index.html
@@ -4,14 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css">
     <title>Forrest Deters</title>
 </head>
 <body>
-    <div class="panel-container">
-        <div class="panel">Coding</div>
-        <div class="panel">Music</div>
-        <div class="panel">Other stuff</div>
-    </div>
+    <nav>
+        <div class="panel-container">
+            <div class="panel panel-coding">
+                <div class="panel-backdrop">
+                    <p>Coding</p>
+                </div>
+            </div>
+            <div class="panel panel-music">
+                <div class="panel-backdrop">
+                    <p>Music</p>
+                </div>
+            </div>
+            <div class="panel panel-other">
+                <div class="panel-backdrop">
+                    <p>Other stuff</p>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <script src="index.js"></script>
 </body>
 </html>
