made link text sizing responsive

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
         <div class="panel-container">
             <div class="panel panel-coding">
                 <div class="panel-backdrop">
-                    <p>Coding</p>
+                    <p><a href="https://github.com/fdeters">Coding</a></p>
                 </div>
             </div>
             <div class="panel panel-music">
                 <div class="panel-backdrop">
-                    <p>Music</p>
+                    <p><a href="https://open.spotify.com/album/6zKzldTS6965ptKSm7k0aG?si=rVYnPiVOTRuOD6vSiDrZ4A">Music</a></p>
                 </div>
             </div>
             <div class="panel panel-other">
                 <div class="panel-backdrop">
-                    <p>Other stuff</p>
+                    <p><a href="https://instagr.am/doctypeforrest">Other stuff</a></p>
                 </div>
             </div>
         </div>
