--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Forrest Deters</title>
 </head>
 <body>
+    <header>
+        Forrest Deters
+    </header>
     <nav>
         <div class="panel-container">
             <div class="panel panel-coding">
