changed links to <button/>s

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
         <div class="panel-container">
             <div class="panel panel-coding">
                 <div class="panel-backdrop">
-                    <p><a href="https://github.com/fdeters">Coding</a></p>
+                    <a href="https://github.com/fdeters"><button>Coding</button></a>
                 </div>
             </div>
             <div class="panel panel-music">
                 <div class="panel-backdrop">
-                    <p><a href="https://open.spotify.com/album/6zKzldTS6965ptKSm7k0aG?si=rVYnPiVOTRuOD6vSiDrZ4A">Music</a></p>
+                    <a href="https://open.spotify.com/album/6zKzldTS6965ptKSm7k0aG?si=rVYnPiVOTRuOD6vSiDrZ4A"><button>Music</button></a>
                 </div>
             </div>
             <div class="panel panel-other">
                 <div class="panel-backdrop">
-                    <p><a href="https://instagr.am/doctypeforrest">Other stuff</a></p>
+                    <a href="https://instagr.am/doctypeforrest"><button>Other stuff</button></a>
                 </div>
             </div>
         </div>
